fix: shim installation in ci, shim failure message
Signed-off-by: Sam Gammon <sam@elide.dev>

--- a/.github/workflows/job.build.yml
+++ b/.github/workflows/job.build.yml
@@ -56,6 +56,8 @@ jobs:
         run: cd ./example-project && elide install
       - name: "Setup: Dependencies (Remote Example)"
         run: cd ./example-project-remote && elide install
+      - name: "Setup: Gradle Java Compiler Shim"
+        run: cp -fv ./.github/workflows/shim.sh $JAVA_HOME/bin/elide-javac && chmod +x $JAVA_HOME/bin/elide-javac
       - name: "Build: Projects"
         run: ./gradlew --stacktrace --info --no-daemon build
       - name: "Build: Remote Example"
